--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         <h1>|_  | |_  |_  | |   |   |    \ </h1>
         <h1> _| |_|_  |_| |_| | | | |  |  |</h1>
         <h1>|_____|___|_____|___|___|____/ </h1>
+        <link rel="stylesheet" href="styles.css">
+      
+      <div id="animation-container">
+      <span id="animated-text"></span>
+      </div>
+      <script src="script.js"></script>
     </main>
   </body>
 </html>
