--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
         <h1>
-          _ _____  __   __  ___  
+         &nbsp_ _____  __   __  ___  
          / |__ / |/  \ /  \|   \ 
          | ||_ \ | () | () | |) |
          |_|___/_|\__/ \__/|___/ 
