--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <main>
         <h1>
-         &nbsp_ _____  __   __  ___  
-         / |__ / |/  \ /  \|   \ 
-         | ||_ \ | () | () | |) |
-         |_|___/_|\__/ \__/|___/ 
+         &nbsp_ _____  __   __  ___<br>
+         / |__ / |/  \ /  \|   \ <br>
+         | ||_ \ | () | () | |) |<br>
+         |_|___/_|\__/ \__/|___/ <br>
         </h1>
         <link rel="stylesheet" href="styles.css">
         <div id="animation-container">
