--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <h1>
          &nbsp_ _____  __   __  ___<br>
-         / |__ / |/  \ /  \|   \ <br>
+         / |__ &nbsp&nbsp/ |/&nbsp&nbsp\ /&nbsp&nbsp\|&nbsp&nbsp&nbsp\ <br>
          | ||_ \ | () | () | |) |<br>
          |_|___/_|\__/ \__/|___/ <br>
         </h1>
