--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 </head>
 <body>
   <h1>Course Grade Analyzer</h1>
-  <form method="POST">
+  <form id="analyzeForm">
     <label for="data">Enter your course data (JSON format):</label>
     <textarea name="data" id="data" rows="10" cols="50"></textarea>
     <br>
     <button type="submit">Analyze</button>
   </form>
+  <div id="result"></div>
+  <script src="script.js"></script>
 </body>
 </html>
