--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Course Grade Analyzer</title>
 </head>
 <body>
-  <h1>Course Grade Analyzer</h1>
+  <h1>Course Grade Analyzer-2</h1>
   <form id="analyzeForm">
     <label for="data">Enter your course data (JSON format):</label>
     <textarea name="data" id="data" rows="10" cols="50"></textarea>
