--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button type="button" id="analyzeButton">Analyze</button>
   </div>
   <div id="result"></div>
+  <pre id="debugOutput"></pre>
   <script src="script.js"></script>
 </body>
 </html>
